<resources>
    <string name="app_name">JibMaak</string>
    <string name="breadcrumb_search_offer"><![CDATA[Menu > Chercher une offre]]></string>
    <string name="lieu_depart">Lieu de départ : </string>
    <string name="chercher_offre">Chercher une offre</string>
    <string name="entrez_lieu_depart">Entrez votre lieu de départ</string>
    <string name="lieu_arrive">Lieu d\'arrivée : </string>
    <string name="entrez_lieu_arrive">Entrez votre lieu d\'arrivée</string>
    <string name="date_depart">Date de départ : </string>
    <string name="entrez_date_depart">Entrez votre date de départ</string>
    <string name="prix_livraison">Prix de livraison :</string>
    <string name="choisir_date">Choisir une date</string>
    <string name="avant_le">Avant le</string>
    <string name="apres_le">Apres le</string>
    <string name="poids_disponible_minimum">Poids disponible minimum : %1$d kg</string>
    <string name="prix_minimum">Prix minimum : %1$d dh/kg</string>
    <string name="prix_maximum">Prix maximum : %1$d dh/kg</string>
    <string name="email_incorrect">Erreur : mail incorrect</string>
    <string name="mdp_vide">Erreur : pas de mot de passe saisi</string>
    <string name="error_credentials">Erreur : email ou mot de passe incorrect</string>
    <string name="error">Erreur : veuillez reessayer</string>
    <string name="no_connection">Pas de connexion</string>
    <string name="se_connecter">Se connecter</string>
    <string name="email">Email :</string>
    <string name="email_ici">Email ici</string>
    <string name="mot_de_passe">Votre mot de passe :</string>
    <string name="mot_de_passe_ici">Votre mot de passe ici</string>
    <string name="pas_compte_inscrire">Pas de compte ? S\'inscrire</string>
    <string name="continuer">Continuer</string>
    <string name="salutations">"Bonjour %1$s ! "</string>
    <string name="deconnexion_surprise">Erreur : vous avez été deconnecté de façon inattendue
        \nVeuillez vous reconnecter et recommencer</string>
    <string name="bonjour">Bonjour !</string>
    <string name="annuler">Annuler</string>
    <string name="demande_connexion">Cette action demande que vous soyez connecté</string>
    <string name="accueil">Accueil</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="nom">Nom :</string>
    <string name="nom_ici">Votre nom ici</string>
    <string name="confirmer_mot_de_passe">Confirmer le mot de passe :</string>
    <string name="confirmer_mot_de_passe_ici">Confirmer le mot de passe ici</string>
    <string name="prenom">Prenom :</string>
    <string name="prenom_ici">Votre prenom ici</string>
    <string name="telephone">Telephone :</string>
    <string name="telephone_ici">Votre téléphone ici</string>
    <string name="error_user_validate_nom">Le nom ne peut pas être vide</string>
    <string name="error_user_validate_prenom">Le prenom ne peut pas être vide</string>
    <string name="error_user_validate_telephone">Numéro incorrect</string>
    <string name="error_user_validate_email">Email incorrect</string>
    <string name="error_user_validate_mdp">Le mot de passe doit contenir au moins 6 caracteres</string>
    <string name="error_user_validate_mdp_conf">Les mots de passe ne sont pas identiques</string>
    <string name="register_error">Une erreur s\'est produite</string>
    <string name="register_success">Votre compte a bien été crée</string>
    <string name="menu">Menu</string>
    <string name="gerer_compte">Gérer mon compte</string>
    <string name="gerer_offres">Gérer mes offres</string>
    <string name="description_loupe">Loupe</string>
    <string name="description_camion">Camion</string>
    <string name="description_compte">Compte</string>
    <string name="error_search">Erreur lors de la recherche</string>
    <string name="menu_chercher_offre"><![CDATA[Menu > Chercher une offre]]></string>
    <string name="nom_prop_offre">%1$s %2$s</string>
    <string name="description_offre">%1$s -> %2$s \n%3$s \n%4$d mad | %5$d kg</string>
    <string name="error_server">Le serveur a rencontré une erreur veuillez reessayer plus tard</string>
    <string name="no_results_search">Pas de résultats</string>
    <string name="yes_resuts_search">Résultats de la recherche : </string>
    <string name="label_details_offre">Details de l\'offre :</string>
    <string name="nom_livreur">Nom du livreur : </string>
    <string name="poids_disponible">Poids disponible : </string>
    <string name="prix_par_kg">Prix par Kg : </string>
    <string name="heure_depart">Heure de départ : </string>
    <string name="tel_livreur">Telephone du livreur : </string>
    <string name="modifier">Modifier</string>
    <string name="mettre_jour_infos">Mettre à jour mes informations</string>
    <string name="changer_mot_de_passe">Changer votre mot de passe</string>
    <string name="supprimer_mon_compte">Supprimer mon compte</string>
    <string name="gerer_mon_compte">Gerer mon compte</string>
    <string name="error_unauthorized">Erreur : vous ne pouvez pas réaliser cette action</string>
    <string name="delete_ok">Votre compte a bien été supprimé</string>
    <string name="update_ok">Vos informations ont bien été mise à jour</string>
    <string name="delete_compte_confirm">Attention cette operation est irréversible\nEtes vous sûr ?</string>
    <string name="yes">Oui</string>
    <string name="se_deconnecter">Se deconnecter</string>
    <string name="deconnexion_volontaire">Vous vous êtes déconnectés</string>
    <string name="breadcrumbs_gerer_offres">Gérer mes offres</string>
    <string name="breadcrumbs_update_offres"><![CDATA[Gerer mes offres > Modifier l\'offre]]></string>
    <string name="voir_mes_offres">Voir mes offres</string>
    <string name="ajouter_une_offre">Ajouter une offre</string>
    <string name="date_arrivee">Date d\'arrivée :</string>
    <string name="poids_disponible_complet">Poids disponible en kg :</string>
    <string name="prix_kg_complet">Prix par kg :</string>
    <string name="breadcrumbs_creer_offre"><![CDATA[Gerer mes offres > Créer une offre]]></string>
    <string name="creer_offre">Creer l\'offre</string>
    <string name="poids_ici">Poids ici</string>
    <string name="prix_ici">Prix ici</string>
    <string name="creer_offre_succes">Votre offre a bien été crée</string>
    <string name="error_poids_incorrect">Erreur ; poids incorrect</string>
    <string name="error_prix_incorrect">Erreur : prix incorrect</string>
    <string name="error_lieu_depart_court">Erreur : lieu de départ trop court</string>
    <string name="error_lieu_arrivee_court">Erreur : lieu d\'arrivee trop court</string>
    <string name="error_validation">Erreur : formulaire incorrect</string>
    <string name="error_dates_vides">Erreur : vous devez choisir une date de départ et d\'arrivée !</string>
    <string name="heure_arrivee">Heure d\'arrivée :</string>
    <string name="ok">OK</string>
    <string name="supprimer_offre">Supprimer l\'offre</string>
    <string name="mettre_jour_offre">Mettre à jour l\'offre</string>
    <string name="update_offer_succes">Votre offre a été mise à jour</string>
    <string name="delete_offer_success">Votre offre a bien été supprimée</string>
    <string name="error_dates_invalides">Erreur : la date de départ doit être avant la date d\'arrivée</string>
    <string name="error_dates_deja_passee">Erreur : la date départ est déjà passée</string>
    <string name="error_lieu_depart_inconnu">Erreur : lieu de départ inconnu</string>
    <string name="error_lieu_arrivee_inconnu">Erreur : lieu d\'arrivee inconnu</string>
    <string name="error_ville_inconnu">Erreur : ville inconnue</string>
</resources>