<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".activities.MenuActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/accent"
        android:paddingHorizontal="20dp"
        android:paddingVertical="5dp"
        android:text="@string/breadcrumb_inscrire"
        android:textColor="#FFFFFF"
        android:textSize="14sp" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_centerVertical="false"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="50dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                app:cardCornerRadius="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:text="@string/nom"
                        android:textColor="#000000" />

                    <EditText
                        android:id="@+id/zone_nom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="personFamilyName"
                        android:hint="@string/nom_ici"
                        android:inputType="textPersonName"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/prenom"
                        android:textColor="@color/black" />

                    <EditText
                        android:id="@+id/zone_prenom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="personGivenName"
                        android:ems="10"
                        android:hint="@string/prenom_ici"
                        android:inputType="textPersonName"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/telephone"
                        android:textColor="@color/black" />

                    <EditText
                        android:id="@+id/zone_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="phoneNational"
                        android:ems="10"
                        android:hint="@string/telephone_ici"
                        android:inputType="phone"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginTop="5dp"
                        android:text="@string/email"
                        android:textColor="#000000" />

                    <EditText
                        android:id="@+id/zone_mail_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="emailAddress"
                        android:hint="@string/email_ici"
                        android:inputType="textEmailAddress"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginTop="5dp"
                        android:text="@string/mot_de_passe"
                        android:textColor="#000000" />

                    <EditText
                        android:id="@+id/zone_mdp_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="newPassword"
                        android:hint="@string/mot_de_passe_ici"
                        android:inputType="textPassword"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginTop="5dp"
                        android:text="@string/confirmer_mot_de_passe"
                        android:textColor="#000000" />

                    <EditText
                        android:id="@+id/zone_mdp_conf"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="newPasswordConfirm"
                        android:hint="@string/confirmer_mot_de_passe_ici"
                        android:inputType="textPassword"
                        android:textSize="14sp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/bouton_inscrire"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="20dp"
                android:text="@string/s_inscrire"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
